--- a/index.html
+++ b/index.html
@@ -28,30 +28,132 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a id="paperclipeitheror" class="anchor" href="#paperclipeitheror" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Paperclip::Eitheror</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p><a href="https://travis-ci.org/powerhome/paperclip-eitheror"><img src="https://travis-ci.org/powerhome/paperclip-eitheror.svg?branch=master" alt="Build Status"></a></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>A <a href="https://github.com/thoughtbot/paperclip/">Paperclip</a> Storage which supports a secondary (called 'or') storage as a fallback while using the primary one (called 'either').</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The purpose of this gem is to help us while migrating our assets to a different place, a better place &lt;3</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Dependency versions are locked to the current versions we have running.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>Add this line to your application's Gemfile:</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<div class="highlight highlight-source-ruby"><pre><span class="pl-k">gem</span> <span class="pl-s"><span class="pl-pds">'</span>paperclip-eitheror<span class="pl-pds">'</span></span></pre></div>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>And then execute:</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<pre><code>$ bundle
+</code></pre>
+
+<p>Or install it yourself as:</p>
+
+<pre><code>$ gem install paperclip-eitheror
+</code></pre>
+
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
+
+<p>Given you have the gem installed and some model, you need to configure your attachment with <code>storage: :eitheror</code>, and set up the primary (<code>either</code>) and the secondary/fallback (<code>or</code>) storages:</p>
+
+<div class="highlight highlight-source-ruby"><pre>has_attached_file <span class="pl-c1">:avatar</span>, {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:eitheror</span>,
+  <span class="pl-c1">either:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:fog</span>
+  },
+  <span class="pl-c1">or:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:filesystem</span>
+  }
+}</pre></div>
+
+<p>You can use specific configuration by passing them on one of the storages config. For instance:</p>
+
+<div class="highlight highlight-source-ruby"><pre>has_attached_file <span class="pl-c1">:avatar</span>, {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:eitheror</span>,
+  <span class="pl-c1">either:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:fog</span>,
+    <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>,
+    <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>
+  },
+  <span class="pl-c1">or:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:filesystem</span>,
+    <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:rails_root/public/attachments/:class/:attachment/:style/:filename<span class="pl-pds">'</span></span>
+  }
+}</pre></div>
+
+<p>The configuration for each storage inherits whatever attributes are defined at the configuration top level config, and existing attributes may be overridden with storage specific values. For example:</p>
+
+<div class="highlight highlight-source-ruby"><pre>has_attached_file <span class="pl-c1">:avatar</span>, {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:eitheror</span>,
+  <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>/api/v1/attachments/:attachment/:id/:style<span class="pl-pds">'</span></span>,
+  <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:rails_root/public/attachments/:class/:attachment/:style/:filename<span class="pl-pds">'</span></span>,
+  <span class="pl-c1">either:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:fog</span>,
+    <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>,
+    <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>
+  },
+  <span class="pl-c1">or:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:filesystem</span>,
+  }
+}</pre></div>
+
+<p>In the example above, the storage <strong>or</strong> will inherit the attributes <code>path</code> and <code>url</code> from the base configuration, while <code>either</code> will provide its own <code>path</code> and <code>url</code> attributes. The following configuration is equivalent:</p>
+
+<div class="highlight highlight-source-ruby"><pre>has_attached_file <span class="pl-c1">:avatar</span>, {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:eitheror</span>,
+  <span class="pl-c1">either:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:fog</span>,
+    <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>,
+    <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>
+  },
+  <span class="pl-c1">or:</span> {
+    <span class="pl-c1">storage:</span> <span class="pl-c1">:filesystem</span>,
+    <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>/api/v1/attachments/:attachment/:id/:style<span class="pl-pds">'</span></span>,
+    <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:rails_root/public/attachments/:class/:attachment/:style/:filename<span class="pl-pds">'</span></span>,
+  }
+}</pre></div>
+
+<p>That is particularly useful when globally configuring <code>paparclip-eitheror</code>.</p>
+
+<h1>
+<a id="global-configuration" class="anchor" href="#global-configuration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Global configuration</h1>
+
+<p>On large codebases it might become very tedious and error prone to chase down all paperclip usages and adapt their configuration to use <code>paperclip-eitheror</code>. An alternative is to configure <code>paperclip</code> default options to use <code>paperclip-eitheror</code> as the default storage.</p>
+
+<div class="highlight highlight-source-ruby"><pre><span class="pl-c"># config/initializers/paperclip.rb</span>
+
+<span class="pl-c1">Paperclip</span>::<span class="pl-c1">Attachment</span>.default_options[<span class="pl-c1">:storage</span>] <span class="pl-k">=</span> <span class="pl-c1">:eitheror</span>
+<span class="pl-c1">Paperclip</span>::<span class="pl-c1">Attachment</span>.default_options[<span class="pl-c1">:either</span>] <span class="pl-k">=</span> {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:fog</span>,
+  <span class="pl-c1">path:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>,
+  <span class="pl-c1">url:</span> <span class="pl-s"><span class="pl-pds">'</span>:attachment/:id/:style/:filename<span class="pl-pds">'</span></span>,
+}
+
+<span class="pl-c1">Paperclip</span>::<span class="pl-c1">Attachment</span>.default_options[<span class="pl-c1">:or</span>] <span class="pl-k">=</span> {
+  <span class="pl-c1">storage:</span> <span class="pl-c1">:filesystem</span>,
+}</pre></div>
+
+<p>Since storages inherit configuration from the base config, you would not have to change any of your existing models and in this case the <strong>or</strong> storage would inherit the configuration on your models acting as your existing storage.</p>
+
+<h2>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h2>
+
+<p>After checking out the repo, run <code>bundle install</code> to install dependencies. Then, run <code>rake spec</code> to run the tests.</p>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
+
+<p>Bug reports and pull requests are welcome on GitHub at <a href="https://github.com/%5BUSERNAME%5D/paperclip-eitheror">https://github.com/[USERNAME]/paperclip-eitheror</a>. This project is intended to be a safe, welcoming space for collaboration, and contributors are expected to adhere to the <a href="http://contributor-covenant.org">Contributor Covenant</a> code of conduct.</p>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<p>The gem is available as open source under the terms of the <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
         </section>
 
         <aside id="sidebar">
